# 8-2-iterators-cpp

./: .gitignore  CMakeLists.txt
8-2-iterators-impl/: CMakeLists.txt  IteratorAlgorithms.h  __2_iterators_impl.1  main.cpp
8-2-iterators-impl.xcodeproj/: project.pbxproj
Unit-GTests/: CMakeLists.txt  IteratorsCopy_Test.cpp  IteratorsEqual_Test.cpp  IteratorsFind_Test.cpp  IteratorsRemoveCopyIf_Test.cpp  Unit_GTests.1  gtest_main.h  sample1.cpp  sample1_unittest.cpp  sample1_unittest.h
